Update OBV Lite 1.4

--- a/OBV Lite 1.4
+++ b/OBV Lite 1.4
@@ -1,12 +1,8 @@
-# OBV Lite Bot 1.4 by sungkhum for Tradewave
+# OBV Lite Bot 1.4 
 # 
 # 1 hour BTC/USD on any exchange (best on BTC-e)
 #
 # Based on an idea created by LazyBear: https://www.tradingview.com/v/D8ld7sgR/
-# LazyBear top BTC jar: 1Cs5DJ7DGqYVBWaAt5rPuRcD66ULgVCFnx
-#
-# Sungkhum tip BTC jar: 1Pu3a4kNEPYiszh8xFv3x7JqWrpbDs28XK
-# Litepresence tip LTC jar: LL92nc7U8dYeVfdG5cmQwPsSDEYPLphY7B
 #
 # **** THIS IS NOT LIVE TESTED AND MAY STILL CONTAIN BUGS ****
 #
